--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ display: hidden;
 .center {
     position: absolute;
     top: 50%;
-    transform: translate(0,-50%);
+    transform: translate(-50%,-50%);
     right: 50%;
     padding: 10px;
     text-align: center;
