get_random_image function is working- two random cards displayed- need to link random cards in playRound function with same random cards in get_random_imaga function

--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,10 @@ h2
 
 .myCards {
 float: left;
-display: hidden;
 }
 
 .opponentCards {
 float: right;
-display: hidden;
-
 }
 
 .center {
@@ -32,5 +29,14 @@ display: hidden;
     margin: auto;
 
 }
+#image_container1 {
+width: 200px;
+height: 300px;
+}
 
+#image_container2 {
+    width: 200px;
+    height: 300px;
+    }
+    
 
