Background image added

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url(https://collectionapi.metmuseum.org/api/collection/v1/iiif/56915/128774/main-image);
+}
+
+
+
+
 h1 {
     color: blue;
     font-size: 70px;
