--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,14 @@ h2
 
 }
 
+.message 
+    {
+        text-align: center;
+        font-family: Cormorant Garamond, serif;
+        font-size: 60px;
+        color:rgb(193, 41, 87);
+    }
+
 .myCards {
 float: left;
 }
