--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   background-position: center; 
   background-repeat: no-repeat; 
   background-size: cover;
+  padding: 0px 40px 20px 40px;
 }
 
 
@@ -28,7 +29,7 @@ h2
     {
         text-align: center;
         font-family: Cormorant Garamond, serif;
-        font-size: 60px;
+        font-size: 40px;
         color:rgb(210, 52, 52);
         background-color: white;
     }
