--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,19 @@ h2
 
 }
 
+.myScore {
+    font-size: 20px;
+    
+
+}
+
+.opponentScore {
+    font-size: 20px;
+
+
+}
+
+
 .message 
     {
         text-align: center;
@@ -49,15 +62,14 @@ float: right;
    align-items: center;
    justify-content: center;
    padding: 20px;
-   font-size: 30px;
+   font-size: 40px;
    background-image: url(https://image.shutterstock.com/z/stock-vector-samurai-warrior-mask-traditional-armor-of-japanese-warrior-vector-illustration-shirt-graphic-1310319145.jpg);
    background-size: 120px;
    background-position: center; 
    background-repeat: no-repeat; 
    background-size: cover;
-   color:  rgb(210, 52, 52);
-   font-style:italic;
-   border: 2px solid;
+   color: rgb(210, 52, 52);
+   border: 8 px solid;
    font-family: Cormorant Garamond, serif;
 
 }
